# tzlocal

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.txt  MANIFEST.in  Makefile  README.rst  backward.txt  get_windows_info.py  pyproject.toml  setup.cfg  setup.py  spiny.conf  tox.ini  update_windows_mappings.py
.github/workflows/: lint.yml  test.yml
tests/: test_tzlocal.py  tests.py
tests/test_data/broken/etc/conf.d/: clock
tests/test_data/conflicting/etc/: timezone
tests/test_data/conflicting/etc/sysconfig/: clock
tests/test_data/conflicting/var/db/: zoneinfo
tests/test_data/noconflict/etc/: localtime  timezone
tests/test_data/noconflict/etc/conf.d/: clock
tests/test_data/noconflict/etc/sysconfig/: clock
tests/test_data/noconflict/usr/share/zoneinfo/: UTC
tests/test_data/ubuntu_docker_bug/etc/: timezone
tzlocal/: __init__.py  darwin.py  olsen.py  olsen_tz.py  tests.py  unix.py  utils.py  win32.py  windows_tz.py
tzlocal/tests/test_data/conflicting/etc/conf.d/: clock
tzlocal/tests/test_data/top_line_comment/etc/: timezone
