[metadata]
name = tzlocal
description = tzinfo object for the local timezone
long_description = file: README.rst, CHANGES.txt
version = 3.0b2.dev0
author = Lennart Regebro
author_email = regebro@gmail.com
project_urls =
    Documentation = https://anyio.readthedocs.io/en/latest/
    Source code = https://github.com/agronholm/anyio
    Issue tracker = https://github.com/agronholm/anyio/issues
license = MIT
keywords = timezone pytz
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
python_requires = >= 3.6
zip_safe = True
install_requires =
    backports.zoneinfo; python_version < "3.9"

[options.packages.find]
exclude = tests

[options.extras_require]
test =
    pytest >= 4.3
    pytest-mock >= 3.3

[zest.releaser]
create-wheel = yes
