[metadata]
name = tzlocal
description = tzinfo object for the local timezone
long_description = file: README.rst, CHANGES.txt
version = 4.0b4
author = Lennart Regebro
author_email = regebro@gmail.com
project_urls =
    Source code = https://github.com/regebro/tzlocal
    Issue tracker = https://github.com/regebro/tzlocal/issues
license = MIT
keywords = timezone
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >= 3.6
zip_safe = True
install_requires =
    pytz_deprecation_shim
    backports.zoneinfo; python_version < "3.9"
    tzdata; platform_system == "Windows"

[options.packages.find]
include = tzlocal

[options.extras_require]
test =
    pytest >= 4.3
    pytest-mock >= 3.3
devenv =
    pytest-cov
    black
    pyroma
    zest.releaser

[zest.releaser]
create-wheel = yes
