[metadata]
name = tzlocal
description = tzinfo object for the local timezone
long_description = file: README.rst, CHANGES.txt
version = 5.0b2.dev0
author = Lennart Regebro
author_email = regebro@gmail.com
project_urls =
    Source code = https://github.com/regebro/tzlocal
    Issue tracker = https://github.com/regebro/tzlocal/issues
license = MIT
keywords = timezone
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >= 3.7
zip_safe = True
install_requires =
    backports.zoneinfo; python_version < "3.9"
    tzdata; platform_system == "Windows"

[options.packages.find]
include = tzlocal

[options.extras_require]
devenv =
    pytest >= 4.3
    pytest-mock >= 3.3
    pytest-cov
    black
    flake8
    check_manifest
    pyroma
    zest.releaser

[zest.releaser]
create-wheel = yes

[flake8]
max-line-length=120
# black and flake8 differs in opinion here, and I can't change black:
ignore=E203
